adding team + rent html

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
           <div class="col-12">
             <nav class="navbar navbar-expand-md navbar-light">
 
-              <a class="navbar-brand" href="#home" target="_blank"> <img src="images/logo.png" alt=""></a>
+              <a class="navbar-brand" href="index.html" target="_blank"> <img src="images/logo.png"
+                  alt="Sunflower Cafe logo"></a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,18 +49,21 @@
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4 active">
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                    <a class="nav-link" href="#">Eat + Drink</a>
+                    <a class="nav-link" href="index.html">Home</a>
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                    <a class="nav-link" href="#">Gallery</a>
+                    <a class="nav-link" href="#menus">Eat + Drink</a>
+                  </li>
+                  <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
+                    <a class="nav-link" href="#gallery">Gallery</a>
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0">
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                    <a class="nav-link" href="#">Rent Our Space</a>
+                    <a class="nav-link" href="rent-our-space.html">Rent Our Space</a>
                   </li>
                   <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                    <a class="nav-link" href="#">Join Our Team</a>
+                    <a class="nav-link" href="join-our-team.html">Join Our Team</a>
                   </li>
                 </ul>
               </div>
@@ -105,7 +109,8 @@
   </div>
 
 
-  <!-- test!!!! -->
+
+  <!-- menu replacing -->
 
   <div id="button-background">
     <button class="" id="eat-button" onclick="show('eat-menu')">Eat</button>
@@ -113,7 +118,7 @@
   </div>
 
   <div id="main_place">
-    <div class="container">
+    <div class="container" id="menus">
       <div class="section menu-divider mt-5 mb-5">
         <div class="row">
           <div class="col-md-1">
@@ -758,7 +763,7 @@
 
   <!-- Gallery -->
 
-  <div class="container">
+  <div class="container" id="gallery">
     <div class="row image row-sm-12">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-6">
         <div class="photo-1">
@@ -896,11 +901,11 @@
                 ultimately lost it in a poker game, which worked out great for us.</p>
             </div>
           </div>
-          <div class="col-md-5 col-sm-10 pt-4">
+          <div class="col-md-5 col-sm-10 col-xs-8 pt-4">
             <!--Column1-->
             <div class="white-box">
               <h4>Heading 2</h4>
-              <button type="button" class="btn btn-warning">
+              <button type="button" class="btn">
                 Join Our Mailing List
               </button>
             </div>
