--- a/index.html
+++ b/index.html
@@ -905,7 +905,7 @@
             <!--Column1-->
             <div class="white-box">
               <h4>Heading 2</h4>
-              <button type="button" class="btn">
+              <button type="button" class="btn footer-btn">
                 Join Our Mailing List
               </button>
             </div>
