my git commits are messed up.

--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -32,7 +32,7 @@
 
         <!-- Navigation -->
         <div class="navigation-wrap bg-light start-header start-style">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="row">
                     <div class="col-12">
                         <nav class="navbar navbar-expand-md navbar-light">
@@ -82,104 +82,104 @@
         <section class="season-desc">
             <div class="desc-wrapper">
                 <!--       <h3 class="season--title">Contact Us</h3> -->
+                <p>
+                    Lorem ipsum dolor sit amet, no molestie reprehendunt nec, in eum detracto voluptaria.
+                    Mea velit accommodare at, sed erant scripserit id. Sea quot minim maiorum te, veniam
+                    convenire ne duo, quo no prima epicuri repudiandae. Has unum meis nullam id, eos iusto
+                    utinam minimum ei.
 
-                <div class="message">
-                    <form action="post">
-                        <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
-                        <input type="email" class="name" id="email" name="password"
-                            placeholder="Please enter your email">
-                        <textarea class="content" placeholder="Type message..."></textarea>
-                        <div class="name" style="background-color:transparent;">
-                            <button type="submit" value="Submit" />Submit</button>
-                        </div>
-                    </form>
+                    Justo persequeris ius ut, sit movet hendrerit te. Has invidunt sapientem democritum ex.
+                    Omnis volutpat urbanitas ea mea. No officiis honestatis eos, ne sea quaestio corrumpit.
+                    Porro quaestio sed ea, falli nusquam est ne. Eum ei fugit docendi, eum officiis
+                    laboramus scribentur ei.
 
+                    Sed ex adversarium comprehensam. Ei ius intellegat deterruisset, ut pro cibo fugit
+                    suavitate. Ullum omittantur conclusionemque ius ea, no ius deseruisse reformidans.
+                    Te scaevola consectetuer vis, ne mutat saepe quo. Eum possit discere mediocrem ei.
+                </p>
+
+                <div class="kwes-form">
+                    <div class="message">
+                        <form action="https://usebasin.com/f/107ffa8e8649" method="POST" accept-charset="UTF-8">
+                            <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
+                            <input type="email" class="name" id="email" name="email"
+                                placeholder="Please enter your email">
+                            <textarea class="content" name="message" placeholder="Type message..."></textarea>
+                            <div class="name" style="background-color:transparent;">
+                                <button type="submit" value="Submit" />Submit</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
+
+
             </div>
         </section>
 
 
-        <footer class="mainfooter" role="contentinfo">
-            <div class="footer-middle">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-1">
-
-                        </div>
-                        <div class="col-md-5 col-sm-12 pb-3">
-
-                            <!--Column1-->
-                            <div class="footer-pad">
-                                <h4>About</h4>
-                                <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the
-                                    heart
-                                    of githe
-                                    California Wine Country. Our food is simple, our ingredients are real. We use salt
-                                    from
-                                    the San
-                                    Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local
-                                    organic
-                                    eggs in all of
-                                    our
-                                    dishes. The Sunflower Caffe is located in Historic Landmark #501 - the old home of
-                                    Salvador Vallejo.
-                                    He
-                                    ultimately lost it in a poker game, which worked out great for us.</p>
-                            </div>
-                        </div>
-                        <div class="col-md-5 col-sm-10 pt-4">
-                            <!--Column1-->
-                            <div class="white-box">
-                                <h4>Heading 2</h4>
-                                <button type="button" class="btn btn-warning">
-                                    Join Our Mailing List
-                                </button>
-                            </div>
-                        </div>
-                        <div class="col-md-1 col-sm-2 pt-3">
-                            <!--Column1-->
-                            <div class="footer-pad">
-                                <ul class="social-network social-circle">
-                                    <li><a href="#" class="icoFacebook" title="Facebook"><i
-                                                class="fa fa-facebook"></i></a>
-                                    </li>
-                                    <li><a href="#" class="icoLinkedin" title="Linkedin"><i
-                                                class="fa fa-linkedin"></i></a>
-                                    </li>
-                                    <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row pt-4">
-                        <div class="col-md-12 copy">
-                            <p class="text-center">© Copyright 2018 - Company Name. All rights reserved.</p>
-                        </div>
-                    </div>
-
-
+        <!----------- Footer ------------>
+        <footer class="footer-bs">
+            <div class="row">
+                <div class="col-md-6 footer-brand animated fadeInLeft">
+                    <h4>About</h4>
+                    <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart of the
+                        California Wine Country. Our food is simple, our ingredients are real. We use salt from the San
+                        Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in
+                        all of
+                        our
+                        dishes. The Sunflower Caffe is located in Historic Landmark #501 - the old home of Salvador
+                        Vallejo.
+                        He
+                        ultimately lost it in a poker game, which worked out great for us</p>
+                    <p>© 2014 BS3 UI Kit, All rights reserved</p>
                 </div>
-            </div>
+
+
+
+                <div class="col-md-2 footer-social animated fadeInDown">
+                    <h4>Connect</h4>
+                    <!-- <ul>
+              <li><a href="https://www.facebook.com/SunflowerCaffe/">Facebook</a></li>
+              <li><a href="#">Twitter</a></li>
+              <li><a href="https://www.instagram.com/sunflowercaffe/">Instagram</a></li>
+            </ul> -->
+                    <ul class="social-network social-circle text-center">
+                        <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+                        <br><br>
+                        <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+                        <br><br>
+                        <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 footer-ns animated fadeInRight">
+                    <h4>Newsletter</h4>
+                    <p>Keep up with the Sunflower!</p>
+                    <p>
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Search for...">
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="button"><i class="fa fa-envelope"
+                                        aria-hidden="true"></i>
+                                </button>
+                            </span>
+                        </div><!-- /input-group -->
+                </div>
         </footer>
 
-    </div>
-    </div>
-    </footer>
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-    </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+        </script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </body>
 
 </html>
