--- a/index.html
+++ b/index.html
@@ -1106,8 +1106,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://matthewelsom.com/assets/js/libs/instafeed.min.js"></script>
-
+  <script src="https://kwes.io/js/kwes.js"></script>
 </body>
 
 </html>
