--- a/index.html
+++ b/index.html
@@ -783,10 +783,10 @@
     </div>
   </div> -->
 
-  <!-- Gallery -->
+  <!-- Gallery  !!!!!!! !! ! !! ! !-->
 
 
-  <div class="container" id="gallery">
+  <!-- <div class="container" id="gallery">
     <div class="row image row-sm-12 container">
       <div class="col-lg-12 col-md-12 col-sm-12 col-xs-6">
         <div class="photo-1">
@@ -801,7 +801,6 @@
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-3 px-5">
-        <!-- hard code this photo to be 150px tall -->
         <div class="photo-3">
           <img src="images/sfc-1.jpg" alt="Éléphant restaurant" class="gallery-img img-fluid pt-5 pl-5 small-img">
         </div>
@@ -812,8 +811,61 @@
         <div class="photo-4">
           <img src="images/temp-img-4.jpg" alt="Éléphant restaurant" class="gallery-img img-fluid float-right">
         </div>
-      </div>
+      </div3
     </div>
+  </div> -->
+
+
+  <div class="masonry">
+    <div class="item">
+      1
+      <img src="images/sfc-2.jpg">
+    </div>
+    <div class="item">
+      2
+      <img src="images/sfc-4.jpg">
+    </div>
+    <div class="item">
+      3
+      <img src="images/sfc-11.jpg">
+    </div>
+    <div class="item">
+      4
+      <img src="images/sfc-1.jpg">
+    </div>
+    <div class="item">
+      5
+      <img src="images/sfc-5.jpg">
+    </div>
+    <div class="item">
+      6
+      <img src="images/sfc-6.jpg">
+    </div>
+    <div class="item">
+      7
+      <img src="images/sfc-7.jpg">
+    </div>
+    <div class="item">
+      8
+      <img src="images/sfc-8.jpg">
+    </div>
+    <div class="item">
+      9
+      <img src="images/sfc-9.jpg">
+    </div>
+    <div class="item">
+      10
+      <img src="images/sfc-10.jpg">
+    </div>
+    <div class="item">
+      11
+      <img src="images/temp-img-3.jpg">
+    </div>
+    <div class="item">
+      12
+      <img src="images/sfc-6.jpg">
+    </div>
+
   </div>
 
 
