--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
   <!-- External Files -->
   <link rel="stylesheet" href="css/index.css">
 
-  <script type="text/javascript" src="js/index.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+  </script>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
   <script type='text/javascript' src='http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js'></script>
@@ -121,8 +124,8 @@
   <!-- menu replacing buttons -->
 
   <div id="button-background">
-    <button class="eat" id="eat-button" onclick="show('eat-menu')">Eat</button>
-    <button class="drink" id="drink-button" onclick="show('drink-menu')">Drink</button>
+    <button class="button" id="eat-button" onclick="show('eat-menu')">Eat</button>
+    <button class="button" id="drink-button" onclick="show('drink-menu')">Drink</button>
   </div>
 
   <!-- menu replacing -->
@@ -634,11 +637,8 @@
                 1/2 bottle 23. bottle 36.</span></span><br>
             <span class="menu-ingredients">Nz</span><br>
           </div>
-
         </div>
       </div>
-
-
     </div>
   </div>
   </div>
@@ -1148,17 +1148,15 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
     integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
+  </script> -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://kwes.io/js/kwes.js"></script>
+  <script type="text/javascript" src="js/index.js"></script>
 </body>
 
 </html>
