--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -98,7 +98,7 @@
                     Te scaevola consectetuer vis, ne mutat saepe quo. Eum possit discere mediocrem ei.
                 </p>
 
-                <div class="kwes-form message">
+                <div class=" message">
                     <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x"> <input
                             type="text" class="name" id="name" name="name" placeholder="Please enter your name">
                         <input type="email" class="name" id="email" name="email" placeholder="Please enter your email">
