--- a/index.html
+++ b/index.html
@@ -486,23 +486,23 @@
             <img src="images/coldbeverage.png" class="menu-header">
           </div>
           <div class="col-md-5 menu-section">
-            <span class="menu-text d-inline-block">Cold Brew "Nitro" Coffee<span
+            <span class="cold menu-text d-inline-block">Cold Brew "Nitro" Coffee<span
                 class="menu-ingredients menu-price pl-5">
                 4.75</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Fresh & Organic Juices<span
+            <span class="cold menu-text d-inline-block pt-5">Fresh & Organic Juices<span
                 class="menu-ingredients menu-price pl-5">
                 4.</span></span><br>
             <span class="menu-ingredients">orange, apple, lemonade</span><br>
           </div>
           <div class="col-md-5">
-            <span class="menu-text d-inline-block second-menu-column">Bottled Water Still or Sparkling<span
+            <span class="cold menu-text d-inline-block second-menu-column">Bottled Water Still or Sparkling<span
                 class="menu-ingredients menu-price pl-5">
                 4.</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Organic Arnold Palmer<span
+            <span class="cold menu-text d-inline-block pt-5">Organic Arnold Palmer<span
                 class="menu-ingredients menu-price pl-5">4.</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Revive Kombucha<span
+            <span class="cold menu-text d-inline-block pt-5">Revive Kombucha<span
                 class="menu-ingredients menu-price pl-5">4.25</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Mexican Coke<span
+            <span class="cold menu-text d-inline-block pt-5">Mexican Coke<span
                 class="menu-ingredients menu-price pl-5">3.25</span></span><br>
           </div>
         </div>
@@ -515,28 +515,30 @@
             <img src="images/hotbeverages.png" class="menu-header">
           </div>
           <div class="col-md-5 menu-section">
-            <span class="menu-text d-inline-block">Drip Coffee<span
+            <span class="hot menu-text d-inline-block">Drip Coffee<span
                 class="pl-5 menu-ingredients menu-price">3.50</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Mocha<span
+            <span class="hot menu-text d-inline-block pt-5">Mocha<span
                 class="menu-ingredients menu-price pl-5">4.75</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Latte<span class="menu-ingredients menu-price pl-5">
+            <span class="hot menu-text d-inline-block pt-5">Latte<span class="menu-ingredients menu-price pl-5">
                 4.25</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Cappuccino<span class="menu-ingredients menu-price pl-5">
+            <span class="hot menu-text d-inline-block pt-5">Cappuccino<span class="menu-ingredients menu-price pl-5">
                 3.75</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Espresso<span class="menu-ingredients menu-price pl-5">
+            <span class="hot menu-text d-inline-block pt-5">Espresso<span class="menu-ingredients menu-price pl-5">
                 3.50</span></span><br>
           </div>
           <div class="col-md-5">
-            <span class="menu-text d-inline-block second-menu-column">Chai Latte<span
+            <span class="hot menu-text d-inline-block second-menu-column">Chai Latte<span
                 class="menu-ingredients menu-price pl-5">
                 3.75</span></span><br>
             <span class="menu-ingredients">make it dirty, add espresso</span><br>
-            <span class="menu-text d-inline-block pt-5">Hot Cup of Tea<span class="menu-ingredients menu-price pl-5">
+            <span class="hot menu-text d-inline-block pt-5">Hot Cup of Tea<span
+                class="menu-ingredients menu-price pl-5">
                 3.50</span></span><br>
             <span class="menu-ingredients">english breakast, early grey, sencha green, verbena mint</span><br>
-            <span class="menu-text d-inline-block pt-5">Hot Chocolate<span class="menu-ingredients menu-price pl-5">
+            <span class="hot menu-text d-inline-block pt-5">Hot Chocolate<span class="menu-ingredients menu-price pl-5">
                 3.75</span></span><br>
-            <span class="menu-text d-inline-block pt-5">Bag of SFC Coffee<span class="menu-ingredients menu-price pl-5">
+            <span class="hot menu-text d-inline-block pt-5">Bag of SFC Coffee<span
+                class="menu-ingredients menu-price pl-5">
                 16.</span></span><br>
             <span class="menu-ingredients">roasted and blended specially for us by Acre Coffee</span><br>
           </div>
@@ -550,23 +552,23 @@
             <img src="images/cocktails.png" class="menu-header">
           </div>
           <div class="col-md-5 menu-section">
-            <span class="menu-text d-inline-block">Roederer Brut<span class="menu-ingredients menu-price pl-5">
+            <span class="menu-text d-inline-block">Roederer Brut</span><br>
+            <span class="menu-ingredients">crisp beautiful & liveley<br><span class="menu-ingredients">
                 glass 12. pitcher 42.</span></span><br>
-            <span class="menu-ingredients">crisp beautiful & liveley</span><br>
-            <span class="menu-text d-inline-block pt-5">Lavender Mist<span class="menu-ingredients menu-price pl-5">
+            <span class="menu-text d-inline-block pt-5">Lavender Mist</span><br>
+            <span class="menu-ingredients">lemon, lavender syrup<br><span class="menu-ingredients">
                 glass 12. pitcher 44.</span></span><br>
-            <span class="menu-ingredients">lemon, lavender syrup</span><br>
-            <span class="menu-text d-inline-block pt-5">Monster Mimosa<span class="menu-ingredients menu-price pl-5">
+            <span class="menu-text d-inline-block pt-5">Monster Mimosa</span><br>
+            <span class="menu-ingredients"><span class="menu-ingredients">
                 glass 10. pitcher 30</span></span><br>
           </div>
           <div class="col-md-5">
-            <span class="menu-text d-inline-block second-menu-column">Bellini<span
-                class="menu-ingredients menu-price pl-5">
+            <span class="menu-text d-inline-block second-menu-column">Bellini</span><br>
+            <span class="menu-ingredients">sparkling wine & peache puree<br><span class="menu-ingredients">
                 glass 9. pitcher 36.</span></span><br>
-            <span class="menu-ingredients">sparkling wine & peache puree</span><br>
-            <span class="menu-text d-inline-block pt-5">Blackberry Mimosa<span
-                class="menu-ingredients menu-price pl-5">glass 11. pitcher 42</span></span><br>
-            <span class="menu-ingredients">blackberry puree<br></span><br>
+            <span class="menu-text d-inline-block pt-5">Blackberry Mimosa</span><br>
+            <span class="menu-ingredients">blackberry puree<br><span class="menu-ingredients">glass 11. pitcher
+                42</span></span><br>
           </div>
         </div>
       </div>
@@ -577,66 +579,91 @@
             <img src="images/beer-wine.png" class="menu-header">
           </div>
           <div class="col-md-5 menu-section">
-            <span class="menu-text d-inline-block">Sonoma Springs IPA<span
-                class="menu-ingredients menu-price pl-5">7.50</span></span><br>
-            <span class="menu-ingredients">gooseberry, passionfruit, crisp, malty</span><br>
-            <span class="menu-text d-inline-block pt-5">Bear Republic "Racer 5" IPA<span
-                class="menu-ingredients menu-price pl-5">6.</span></span><br>
-            <span class="menu-ingredients">citrusy, malty caramel, very hoppy</span><br>
-            <span class="menu-text d-inline-block pt-5">North Coast "Scrimshaw" Pilsner<span
-                class="menu-ingredients menu-price pl-5">5.</span></span><br>
-            <span class="menu-ingredients">gooseberry, passionfruit, crisp, malty</span><br>
-          </div>
-        </div>
-      </div>
+            <span class="menu-text d-inline-block">Sonoma Springs IPA</span><br>
+            <span class="menu-ingredients">gooseberry, passionfruit, crisp, malty <span
+                class="menu-ingredients">7.50</span></span><br>
+            <span class="menu-text d-inline-block pt-5">Bear Republic "Racer 5" IPA</span><br>
+            <span class="menu-ingredients">citrusy, malty caramel, very hoppy <span
+                class="menu-ingredients">6.</span></span><br>
+            <span class="menu-text d-inline-block pt-5">North Coast "Scrimshaw" Pilsner></span><br>
+            <span class="menu-ingredients">gooseberry, passionfruit, crisp, malty <span class="menu-ingredients">5.
+              </span></span> <br>
 
-      <div class="section menu-divider mb-5">
-        <div class="row">
-          <div class="col-md-1">
-            <img src="images/beer-wine.png" class="menu-header">
-          </div>
-          <div class="col-md-5 menu-section">
-            <span class="menu-text d-inline-block">Gewuztraminer<span class="menu-ingredients menu-price pl-5">glass 9.
-                1/2 bottle 20. bottle 32.</span></span><br>
-            <span class="menu-ingredients">Anderson Valley</span><br>
-            <span class="menu-text d-inline-block pt-5">Rose of Pinot<span
-                class="menu-ingredients menu-price pl-5">glass 9. 1/2 bottle 20. bottle 32.</span></span><br>
-            <span class="menu-ingredients">Anderson Valley</span><br>
+            <span class="menu-text d-inline-block pt-5">Chaname Gewuztraminer</span><br>
+            <span class="menu-ingredients">Anderson Valley 9. 20.
+              32.</span><br>
+
+            <span class="menu-text d-inline-block pt-5">Chaname Rose of Pinot</span><br>
+            <span class="menu-ingredients">Anderson Valley 9. 20.
+              32.</span><br>
           </div>
           <div class="col-md-5">
-            <span class="menu-text d-inline-block second-menu-column">Grenache<span
-                class="menu-ingredients menu-price pl-5">glass 12.
-                1/2 bottle 29. bottle 48.</span></span><br>
-            <span class="menu-ingredients">Anderson Valley</span><br>
-            <span class="menu-text d-inline-block pt-5">Pinot Noir<span class="menu-ingredients menu-price pl-5">glass
-                13. 1/2 bottle 29. bottle 48.</span></span><br>
-            <span class="menu-ingredients">Anderson Valley</span><br>
+            <span class="menu-text d-inline-block">Liocco Chardonnay </span><br>
+            <span class="menu-ingredients">Sonoma County 12. 25. 42.</span><br>
+            <span class="menu-text d-inline-block pt-5">Bedrock Rose</span><br>
+            <span class="menu-ingredients">Sonoma Valley 11. 24. 37.</span><br>
+            <span class="menu-text d-inline-block pt-5">Maui Sauvignon Blanc</span><br>
+            <span class="menu-ingredients">Nz 10.
+              23. 36.</span><br>
+            <span class="menu-text d-inline-block second-menu-column pt-5">Chaname Grenache</span><br>
+            <span class="menu-ingredients">Anderson Valley 12.
+              29. 48.</span><br>
+            <span class="menu-text d-inline-block pt-5">Chaname Pinot Noir</span><br>
+            <span class="menu-ingredients">Anderson Valley 13. 29. 48.</span><br>
           </div><br>
-          <span class="menu-ingredients pl-5 pt-2">** made by hand in caves on the mountains above the sonoma
-            plaza</span>
-        </div>
-      </div>
-
-      <div class="section menu-divider mb-5">
-        <div class="row">
-          <div class="col-md-1">
-            <img src="images/beer-wine.png" class="menu-header">
-          </div>
-          <div class="col-md-5 menu-section">
-            <span class="menu-text d-inline-block">Liocco Chardonnay<span class="menu-ingredients menu-price pl-5">glass
-                12. 1/2 bottle 25. bottle 42.</span></span><br>
-            <span class="menu-ingredients">Sonoma County</span><br>
-            <span class="menu-text d-inline-block pt-5">Bedrock Rose<span class="menu-ingredients menu-price pl-5">glass
-                11. 1/2 bottle 24. bottle 37.</span></span><br>
-            <span class="menu-ingredients">Sonoma Valley</span><br>
-            <span class="menu-text d-inline-block pt-5">Maui Sauvignon Blanc<span
-                class="menu-ingredients menu-price pl-5">glass 10.
-                1/2 bottle 23. bottle 36.</span></span><br>
-            <span class="menu-ingredients">Nz</span><br>
-          </div>
         </div>
       </div>
     </div>
+
+    <!-- <div class="section menu-divider mb-5">
+      <div class="row">
+        <div class="col-md-1">
+          <img src="images/beer-wine.png" class="menu-header">
+        </div>
+        <div class="col-md-5 menu-section">
+          <span class="menu-text d-inline-block">Chaname Gewuztraminer<span
+              class="menu-ingredients menu-price pl-5">glass 9.
+              1/2 bottle 20. bottle 32.</span></span><br>
+          <span class="menu-ingredients">Anderson Valley</span><br>
+          <span class="menu-text d-inline-block pt-5">Chaname Rose of Pinot<span
+              class="menu-ingredients menu-price pl-5">glass 9. 1/2 bottle 20. bottle 32.</span></span><br>
+          <span class="menu-ingredients">Anderson Valley</span><br>
+        </div>
+        <div class="col-md-5">
+          <span class="menu-text d-inline-block second-menu-column">Chaname Grenache<span
+              class="menu-ingredients menu-price pl-5">glass 12.
+              1/2 bottle 29. bottle 48.</span></span><br>
+          <span class="menu-ingredients">Anderson Valley</span><br>
+          <span class="menu-text d-inline-block pt-5">Chaname Pinot Noir<span
+              class="menu-ingredients menu-price pl-5">glass
+              13. 1/2 bottle 29. bottle 48.</span></span><br>
+          <span class="menu-ingredients">Anderson Valley</span><br>
+        </div><br>
+        <span class="menu-ingredients pl-5 pt-2">** made by hand in caves on the mountains above the sonoma
+          plaza</span>
+      </div>
+    </div>
+
+    <div class="section menu-divider mb-5">
+      <div class="row">
+        <div class="col-md-1">
+          <img src="images/beer-wine.png" class="menu-header">
+        </div>
+        <div class="col-md-5 menu-section">
+          <span class="menu-text d-inline-block">Liocco Chardonnay<span class="menu-ingredients menu-price pl-5">glass
+              12. 1/2 bottle 25. bottle 42.</span></span><br>
+          <span class="menu-ingredients">Sonoma County</span><br>
+          <span class="menu-text d-inline-block pt-5">Bedrock Rose<span class="menu-ingredients menu-price pl-5">glass
+              11. 1/2 bottle 24. bottle 37.</span></span><br>
+          <span class="menu-ingredients">Sonoma Valley</span><br>
+          <span class="menu-text d-inline-block pt-5">Maui Sauvignon Blanc<span
+              class="menu-ingredients menu-price pl-5">glass 10.
+              1/2 bottle 23. bottle 36.</span></span><br>
+          <span class="menu-ingredients">Nz</span><br>
+        </div>
+      </div>
+    </div> -->
+  </div>
   </div>
   </div>
 
@@ -813,7 +840,7 @@
   </div> -->
 
 
-  <div class="masonry">
+  <div id="gallery" class="masonry">
     <div class="item">
       1
       <img src="images/sfc-2.jpg">
@@ -824,7 +851,7 @@
     </div>
     <div class="item">
       3
-      <img src="images/sfc-11.jpg">
+      <img src="images/sfc-8.jpg">
     </div>
     <div class="item">
       4
@@ -840,7 +867,7 @@
     </div>
     <div class="item">
       7
-      <img src="images/sfc-7.jpg">
+      <img src="images/sfc-11.jpg">
     </div>
     <div class="item">
       8
@@ -856,11 +883,11 @@
     </div>
     <div class="item">
       11
-      <img src="images/temp-img-3.jpg">
+      <img src="images/sfc-13.jpg">
     </div>
     <div class="item">
       12
-      <img src="images/sfc-6.jpg">
+      <img src="images/sfc-12.jpg">
     </div>
 
   </div>
