--- a/join-our-team.html
+++ b/join-our-team.html
@@ -98,8 +98,8 @@
                 </p>
 
                 <div class="kwes-form message">
-                    <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x"> <input
-                            type="text" class="name" id="name" name="name" placeholder="Please enter your name">
+                    <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x" mode="test">
+                        <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
                         <input type="email" class="name" id="email" name="email" placeholder="Please enter your email">
                         <textarea class="content" name="message" placeholder="Type message..."></textarea>
                         <div class="name" style="background-color:transparent;">
