--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css"> -->
+
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
@@ -14,6 +16,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+
 
   <!-- External Files -->
   <link rel="stylesheet" href="css/index.css">
@@ -1132,15 +1135,20 @@
       <div class="col-md-4 footer-ns animated fadeInRight">
         <h4>Newsletter</h4>
         <p>Keep up with the Sunflower!</p>
-        <p>
+        <form action="https://sonomasunflower.us7.list-manage.com/subscribe/post" method="POST">
+          <input type="hidden" name="u" value="4ae5921a3912b451ab862009e">
+          <input type="hidden" name="id" value="c5b62202c9">
           <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for...">
+            <input type="text" class="form-control" placeholder="Enter your email...">
             <span class="input-group-btn">
               <button class="btn btn-default" type="button"><i class="fa fa-envelope" aria-hidden="true"></i>
               </button>
             </span>
           </div>
+        </form>
       </div>
+
+
   </footer>
 
   <!----------- Footer ------------>
@@ -1181,6 +1189,7 @@
   </script>
   <script src="https://kwes.io/js/kwes.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
+
 </body>
 
 </html>
