update to send to J&M

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h5 class="mt-5 hours">Connect</h5>
         <a class="connect right-arrow"
           href="https://www.facebook.com/SunflowerCaffe/">Facebook</a><span>&rarr;</span><br>
-        <a class="connect right-arrow" href="#">Twitter</a><span>&rarr;</span><br>
+        <!-- <a class="connect right-arrow" href="#">Twitter</a><span>&rarr;</span><br> -->
         <a class="connect right-arrow" href="https://www.instagram.com/sunflowercaffe/">Instagram</a><span>&rarr;</span>
       </div>
     </div>
@@ -1127,9 +1127,11 @@
         <h4>Connect</h4>
 
         <ul class="social-network social-circle text-center">
-          <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li><br><br>
-          <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li><br><br>
-          <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://www.facebook.com/SunflowerCaffe/"" class=" icoFacebook" title="Facebook"><i
+                class="fa fa-facebook"></i></a></li><br><br>
+          <li><a href="https://www.instagram.com/sunflowercaffe/" class="icoInstagram" title="Instagram"><i
+                class="fa fa-instagram"></i></a></li><br><br>
+          <!-- <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li> -->
         </ul>
       </div>
       <div class="col-md-4 footer-ns animated fadeInRight">
@@ -1139,6 +1141,7 @@
           <input type="hidden" name="u" value="4ae5921a3912b451ab862009e">
           <input type="hidden" name="id" value="c5b62202c9">
           <div class="input-group">
+            <!-- type="email" name="b_email" tabindex="-1" value="" placeholder="youremail@gmail.com" id="b_email" -->
             <input type="text" class="form-control" placeholder="Enter your email...">
             <span class="input-group-btn">
               <button class="btn btn-default" type="button"><i class="fa fa-envelope" aria-hidden="true"></i>
