--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -150,46 +150,43 @@
                 <h4>About</h4>
                 <p>Welcome to the Sunflower Caffe. We are located on the historic Sonoma Plaza in the heart of the
                     California Wine Country. Our food is simple, our ingredients are real. We use salt from the San
-                    Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in
-                    all of
+                    Francisco Bay, Milk from cows grazing in the Sonoma County pastures and local organic eggs in all of
                     our
-                    dishes. The Sunflower Caffe is located in Historic Landmark #501 - the old home of Salvador
-                    Vallejo.
+                    dishes. The Sunflower Caffe is located in Historic Landmark #501 - the old home of Salvador Vallejo.
                     He
                     ultimately lost it in a poker game, which worked out great for us</p>
                 <p>© 2014 BS3 UI Kit, All rights reserved</p>
             </div>
-
-
-
             <div class="col-md-2 footer-social animated fadeInDown">
                 <h4>Connect</h4>
-                <!-- <ul>
-              <li><a href="https://www.facebook.com/SunflowerCaffe/">Facebook</a></li>
-              <li><a href="#">Twitter</a></li>
-              <li><a href="https://www.instagram.com/sunflowercaffe/">Instagram</a></li>
-            </ul> -->
+
                 <ul class="social-network social-circle text-center">
-                    <li><a href="#" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-                    <br><br>
-                    <li><a href="#" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <br><br>
-                    <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://www.facebook.com/SunflowerCaffe/"" class=" icoFacebook" title="Facebook"><i
+                                class="fa fa-facebook"></i></a></li><br><br>
+                    <li><a href="https://www.instagram.com/sunflowercaffe/" class="icoInstagram" title="Instagram"><i
+                                class="fa fa-instagram"></i></a></li><br><br>
+                    <!-- <li><a href="#" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li> -->
                 </ul>
             </div>
-            <div class="col-md-3 footer-ns animated fadeInRight">
+            <div class="col-md-4 footer-ns animated fadeInRight">
                 <h4>Newsletter</h4>
                 <p>Keep up with the Sunflower!</p>
-                <p>
+                <form action="https://sonomasunflower.us7.list-manage.com/subscribe/post" method="POST">
+                    <input type="hidden" name="u" value="4ae5921a3912b451ab862009e">
+                    <input type="hidden" name="id" value="c5b62202c9">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
+                        <!-- type="email" name="b_email" tabindex="-1" value="" placeholder="youremail@gmail.com" id="b_email" -->
+                        <input type="text" class="form-control" placeholder="Enter your email...">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button"><i class="fa fa-envelope"
                                     aria-hidden="true"></i>
                             </button>
                         </span>
-                    </div><!-- /input-group -->
+                    </div>
+                </form>
             </div>
+
+
     </footer>
 
 
