--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <!-- menu replacing -->
 
   <div id="main_place">
-    <div class="container" id="menus">
+    <div class="container-fluid" id="menus">
       <div class="section menu-divider mt-5 mb-5">
         <div class="row">
           <div class="col-md-1">
