--- a/join-our-team.html
+++ b/join-our-team.html
@@ -97,7 +97,8 @@
                     Te scaevola consectetuer vis, ne mutat saepe quo. Eum possit discere mediocrem ei.
                 </p>
 
-                <div class="kwes-form message">
+                <!-- kwes-form -->
+                <div class=" message">
                     <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x" mode="test">
                         <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
                         <input type="email" class="name" id="email" name="email" placeholder="Please enter your email">
