--- a/rent-our-space.html
+++ b/rent-our-space.html
@@ -96,8 +96,8 @@
                     suavitate. Ullum omittantur conclusionemque ius ea, no ius deseruisse reformidans.
                     Te scaevola consectetuer vis, ne mutat saepe quo. Eum possit discere mediocrem ei.
                 </p>
-
-                <div class="kwes-form message">
+                <!-- kwes-form -->
+                <div class=" message">
                     <form method="POST" action="https://kwes.io/api/foreign/forms/eAkcCGIQD8Zj2mUJrJ8x" mode="test">
                         <input type="text" class="name" id="name" name="name" placeholder="Please enter your name">
                         <input type="email" class="name" id="email" name="email" placeholder="Please enter your email">
