--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
           dishes. The Sunflower Caffe is located in Historic Landmark #501 - the old home of Salvador Vallejo.
           He
           ultimately lost it in a poker game, which worked out great for us</p>
-        <p>© 2014 BS3 UI Kit, All rights reserved</p>
+        <p>© 2019 Sunflower Caffé</p>
       </div>
       <div class="col-md-2 footer-social animated fadeInDown">
         <h4>Connect</h4>
